1006 iijima feat: 初回イベント参加をSQLから画面まで接続
